--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>me.jetby</groupId>
-    <artifactId>cmdtimer</artifactId>
-    <version>1.0</version>
+    <artifactId>FunCooldowns</artifactId>
+    <version>1.3</version>
     <packaging>jar</packaging>
 
     <name>FunCooldowns</name>
@@ -26,7 +26,7 @@
                     <relocations>
                         <relocation>
                             <pattern>org.bstats</pattern>
-                            <shadedPattern>me.jetby</shadedPattern>
+                            <shadedPattern>me.jetby.cmdTimer</shadedPattern>
                         </relocation>
                     </relocations>
                 </configuration>
@@ -38,7 +38,7 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>
+            </plugin><plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-compiler-plugin</artifactId><configuration><source>8</source><target>8</target></configuration></plugin>
         </plugins>
     </build>
 
